fixed: cafeteria native bridge layout issues

--- a/packages/cafeteria/app/stylesheets/_nativebridge.scss
+++ b/packages/cafeteria/app/stylesheets/_nativebridge.scss
@@ -3,7 +3,7 @@
 #nativebridge-console {
     position: relative;
     width: 96%;
-    height: 250px;
+    height: 100px;
     margin: 16px auto;
     padding: 10px;
     opacity: .6;
